--- a/Solution/FastWorkspace.Client/FastWorkspace.Client.csproj
+++ b/Solution/FastWorkspace.Client/FastWorkspace.Client.csproj
@@ -40,6 +40,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+        <PackageReference Include="MudBlazor" Version="6.7.0" />
     </ItemGroup>
 
     <ItemGroup>
