--- a/Solution/FastWorkspace.Client/FastWorkspace.Client.csproj
+++ b/Solution/FastWorkspace.Client/FastWorkspace.Client.csproj
@@ -41,6 +41,8 @@
 
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
+        <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+        <PackageReference Include="Humanizer.Core.fr" Version="2.14.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.3.5" />
         <PackageReference Include="MudBlazor" Version="6.7.0" />
