--- a/Solution/FastWorkspace.Client/FastWorkspace.Client.csproj
+++ b/Solution/FastWorkspace.Client/FastWorkspace.Client.csproj
@@ -52,4 +52,8 @@
       <ProjectReference Include="..\FastWorkspace.Domain\FastWorkspace.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Shared\Molecules\Jobs\" />
+    </ItemGroup>
+
 </Project>
