--- a/Solution/ActivityLauncher.Client/ActivityLauncher.Client.csproj
+++ b/Solution/ActivityLauncher.Client/ActivityLauncher.Client.csproj
@@ -11,7 +11,7 @@
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
 
         <!-- Display name -->
-        <ApplicationTitle>Smart Workspace Startup</ApplicationTitle>
+        <ApplicationTitle>Activity Launcher for Windows</ApplicationTitle>
 
         <!-- Versions -->
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
